# lively-rs

./: Cargo.toml  flake.nix
src/: audio.rs  compute.wgsl  draw.wgsl  main.rs  mouse.rs  shader.wgsl  web_mode.rs
src/graphics/: framework.rs
