[package]
name = "lively-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = [ "pod_saturating", "derive" ] }
env_logger = "0.10.0"
input = "0.8.2"
log = "0.4.19"
nanorand = "0.7.0"
pollster = "0.3.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = ["calloop", "pkg-config"] }
wayland-backend = { version = "0.3.10", features = ["client_system"] }
wayland-client = { version = "0.31.10" }
wgpu = "25.0.2"
hyprland = "0.4.0-beta.1"
gtk4-layer-shell = "0.8.0"
webkit6 = "0.6.1"
clap = { version = "4.6.3", features = ["derive"] }
gtk4 = { version = "0.11.4", features = ["v4_10"] }
cpal = { version = "0.18.1", features = ["pipewire"] }
ctrlc = "3.5.2"
